# geopardie

./: .gitignore  README.md  pyproject.toml
src/geopardie/: __main__.py  launcher.py
src/geopardie/core/: __init__.py  bot_client.py  extension_loader.py
src/geopardie/extensions/: geopardie_game.py  user_analyzer.py
src/geopardie/framework/: embed_prefabs.py  geopardie_constructs.py  geopardie_handlers.py  modal_prefabs.py
src/geopardie/prefabs/: embed_prefabs.py
tests/: test_encoding_decoding.py
